@@ -13,7 +13,7 @@
  *
  **********************************************************************
  *
- * Last port: geom/util/GeometryTransformer.java rev. 1.4 (JTS-1.7)
+ * Last port: geom/util/GeometryTransformer.java rev. 1.6 (JTS-1.7.1+)
  *
  **********************************************************************/
 
@@ -381,6 +381,9 @@ GeometryTransformer::transformGeometryCollection(
 
 /**********************************************************************
  * $Log$
+ * Revision 1.3  2006/06/19 21:20:22  strk
+ * updated port info
+ *
  * Revision 1.2  2006/04/11 16:04:34  strk
  * geos::simplify::DouglasPeukerSimplifier class + unit test
  *
