@@ -13,7 +13,7 @@
  *
  **********************************************************************
  *
- * Last port: geom/util/GeometryTransformer.java rev. 1.4 (JTS-1.7)
+ * Last port: geom/util/GeometryTransformer.java rev. 1.6 (JTS-1.7.1+)
  *
  **********************************************************************/
 
@@ -192,6 +192,9 @@ private:
 
 /**********************************************************************
  * $Log$
+ * Revision 1.4  2006/06/19 21:20:22  strk
+ * updated port info
+ *
  * Revision 1.3  2006/04/13 14:25:17  strk
  * TopologyPreservingSimplifier initial port
  *
